# cleansvg

./: .appveyor.yml  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
ext/: CMakeLists.txt
ext/sdl/: .gitignore  CMakeLists.txt
src/: Application.cpp  Application.hpp  CMakeLists.txt  Camera.cpp  Camera.h  Fwd.h  VectorImage.cpp  VectorImage.h  VectorImage.hpp  Window.cpp  Window.h  Window.hpp  main.cpp
